--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -6,6 +6,11 @@ FROM node:18-alpine
 
 WORKDIR /app
 
+# Argumento de build para REACT_APP_API_URL
+# Las variables REACT_APP_ solo se inyectan en tiempo de build, no en runtime
+ARG REACT_APP_API_URL=http://alonso-backend-api:5000
+ENV REACT_APP_API_URL=${REACT_APP_API_URL}
+
 # Copiar archivos de dependencias
 COPY package*.json ./
 
